# CNL_scalpel

./: .gitignore  LICENSE  README.md  environment.yaml  environment.yml  pyproject.toml
classes/: label.py  subject.py
data/: rh.pos_6_vert.label  rh.pos_boundary.label
docs/: CNL_scalpel_notes.org
notebooks/: centroid.ipynb  compensation.ipynb  curvature_difference.ipynb  demo.ipynb  gaps.ipynb  gyral_gap.ipynb  scratch.ipynb  sulcal_depth.ipynb  volume_scratch.ipynb
results/: adj-labels-lh.txt
scalpel.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
scripts/: #sulcal_length.py#  .#mris_anatomical_stats.py  ABIDE_labels.csv  ADNI_labels.csv  AHBA_labels.csv  CNL_scalpel_scratch.ipynb  DevProso_labels.csv  HCP_labels.csv  IPS_IPS-PO_gyral_cluster_gap.py  MNI_flirt.sh  MNI_flirt.sh~  MSC_labels.csv  NH_Primates_labels.csv  NORA_labels.csv  all_labels_all_projects.csv  anatomical_stats_cortex.sh  anatomical_stats_cortex.sh~  aparc_fsav_volumes.py  aparc_fsav_volumes.py~  cluster_annotations.py  dHCP_labels.csv  delete_empty_labels.py  file_utils.py  files_for_thresholding.txt  find_centroid.py  freesurfer_utils.py  getMinDistances.py  get_adj_label.py  get_annotations_from_list.py  get_cortex_sulci_gyri.py  get_label_names.py  get_label_names.py~  get_label_subsets.py  get_tar_from_list.py  get_tar_from_list.py~  get_threshold_curv.py  gyral_gap.py  labels_to_MNI_vol_FLIRT.sh  make_MPM_labels.py  mm_depth.py  (+21 more)
scripts/wrappers/: run_label2vol.py
src/: freesurfer_utils.py  mesh_laplace_sulci.py  preprocessing_volumes.py  surface_funcs.py  utility_funcs.py
src.egg-info/: SOURCES.txt
src/classes/: label.py  subject.py
src/scalpel/: subject.py
src/scalpel/analysis/: analyzer.py
src/scalpel/classes/: label.py  label_stats.py
src/scalpel/measurement/: measurer.py
src/scalpel/utilities/: freesurfer_utils.py  geometry_utils.py  plotting.py  setup_freesurfer.py  surface_utils.py
src/scalpel/utils/: freesurfer_utils.py  surface_utils.py
src/scalpel/visualization/: plotting.py  visualizer.py
src/src.egg-info/: SOURCES.txt  top_level.txt
src/utilities/: freesurfer_utils.py  fs_config.py  geometry_utils.py  plotting.py  surface_utils.py  utility_funcs.py
tests/: freesurfer_tests.py  plotting_tests.py  test_freesurfer.py  test_plotting.py
