[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scalpel"
version = "0.0.0"
requires-python = ">=3.10"
description = "Python package for FreeSurfer and neuroanatomical research"
authors = [
  { name="Ben Parker", email="benparker@berkeley.edu" },
]
license = {text = "MIT AND (Apache-2.0 OR BSD-2-Clause)"}
dependencies = [
  "numpy>=1.23.0,<2.0.0",
  "pandas>=1.3.0,<2.0.0",
  "matplotlib>=3.10.0",
  "scipy>=1.15.1",
  "scikit-learn>=1.6.1",
  "nibabel>=5.3.2",
  "networkx>=3.1",
  "seaborn>=0.13.2",
  "trimesh>=4.6.2",
  "cython>=3.0.12",
  "pyglet>=1.5.31",
  "pytest>=8.3.4",
  "joblib>=1.4.2",
  "pillow>=11.1.0",
  "bottleneck>=1.4.2",
  "python-dateutil>=2.9.0",
  "typing-extensions>=4.12.2",
  "ipykernel>=6.29"
]

[tool.setuptools]
packages = {find = {where = ["src"]}}
package-dir = {"" = "src"}

[project.urls]
Homepage = "https://github.com/b-parker/CNL_scalpel/"
Issues = "https://github.com/b-parker/CNL_scalpel/issues"
readme = "README.md"